--- a/LoginAppLearnwithXML/app/src/main/res/layout/activity_main.xml
+++ b/LoginAppLearnwithXML/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,11 @@
         android:id="@+id/txt_send_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
-        tools:text="send to email : "/>
+        android:visibility="invisible"
+        tools:text="send to email : "
+        tools:visibility="visible" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_code"
@@ -47,18 +48,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:visibility="invisible"
-        app:errorEnabled="true"
         app:counterEnabled="true"
         app:counterMaxLength="6"
-        app:passwordToggleEnabled="true">
+        app:errorEnabled="true"
+        app:passwordToggleEnabled="true"
+        tools:visibility="visible">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLength="6"
             android:hint="@string/code"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:maxLength="6" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,17 +68,19 @@
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
         android:text="@string/confirm"
-        android:textSize="22sp"/>
+        android:textSize="22sp"
+        android:visibility="invisible"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/txt_wrong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:text="@string/wrong_email"
         android:textSize="16sp"
         android:visibility="invisible"
-        android:text="@string/wrong_email"/>
+        tools:visibility="visible" />
 
 </LinearLayout>
